[gd_scene load_steps=9 format=1]

[ext_resource path="res://AreaNoTocable.gd" type="Script" id=1]
[ext_resource path="res://QPF_assets/art/HadamardSquare.png" type="Texture" id=2]
[ext_resource path="res://QPF_assets/art/HadamardSquare2.png" type="Texture" id=3]
[ext_resource path="res://QPF_assets/art/Had_PU_line.png" type="Texture" id=4]
[ext_resource path="res://QPF_assets/art/Had_PU_line2.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8.43978, 6.84334 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "on",
"speed": 0.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "turning_off",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "on",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "turning_off",
"speed": 6.0
} ]

[node name="AreaNoTocable" type="Area2D"]

transform/pos = Vector2( 341.971, 618.75 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 63.2364, 0, 0, 21.0167, 7.78016, 15.0045 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorFrame" type="ColorFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -521.0
margin/top = -179.0
margin/right = 537.0
margin/bottom = 209.0
color = Color( 0.929688, 0.0472107, 0.0472107, 0.524588 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 7.78016, 15.0045 )
transform/scale = Vector2( 63.2364, 21.0167 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="TurnOffHPUTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="AnimatedSpriteUp" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 27, -216 )
transform/scale = Vector2( 0.25, 0.25 )
frames = SubResource( 2 )
animation = "on"

[node name="AnimatedSpriteDown" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 27, 246 )
transform/scale = Vector2( 0.25, 0.25 )
frames = SubResource( 2 )
animation = "on"

[node name="AnimationChangeTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="AnimatedSpriteLineUp" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 19.2954, -176 )
transform/scale = Vector2( 2.44875, 1 )
frames = SubResource( 3 )
animation = "on"

[node name="AnimatedSpriteLineDown" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 19.2954, 206 )
transform/scale = Vector2( 2.44875, 1 )
frames = SubResource( 3 )
animation = "on"

[connection signal="body_enter" from="." to="." method="_on_AreaNoTocable_body_enter"]

[connection signal="body_exit" from="." to="." method="_on_AreaNoTocable_body_exit"]

[connection signal="timeout" from="TurnOffHPUTimer" to="." method="_on_TurnOffHPUTimer_timeout"]

[connection signal="timeout" from="AnimationChangeTimer" to="." method="_on_AnimationChangeTimer_timeout"]


